# RREAV

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-linux.yml  build-windows.yml  build.yml
demo/: CMakeLists.txt
demo/rreav-base-demo/: CMakeLists.txt
demo/rreav-base-demo/include/: rreav.h
demo/rreav-base-demo/resources/: config.json
demo/rreav-base-demo/resources/shaders/: main.frag
demo/rreav-base-demo/src/: main.cpp
dependencies/: CMakeLists.txt
include/: AudioManager.h  Interface.h  Mesh.h  Model.h  ObjectLoader.h  ShaderManager.h  Utils.h
include/glad/: gl.h
include/rreav/: AudioManager.h  Config.h  Interface.h  Mesh.h  ShaderManager.h  Window.h
include/rreav/OpenGL/: gl.c  opengl.h
resources/shaders/: main.frag
src/: AudioManager.cpp  Config.cpp  Interface.cpp  Mesh.cpp  ObjectLoader.cpp  ShaderManager.cpp  Window.cpp  Window.h  gl.c  main.cpp
